src/test/compile-fail/restricted-keyword2.rs
// error-pattern:found `fail` in restricted position

fn main() {
    enum fail = int;
}
